--- a/bottle_cap.ipynb
+++ b/bottle_cap.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "text/plain": [
-       "<pydrake.geometry.MeshcatVisualizer at 0x7f99675c16f0>"
+       "<pydrake.geometry.MeshcatVisualizer at 0x7f5468057eb0>"
       ]
      },
      "execution_count": 5,
