changed sdf folder location

--- a/bottle_cap.ipynb
+++ b/bottle_cap.ipynb
@@ -45,8 +45,8 @@
     "parser = Parser(plant, scene_graph)\n",
     "parser.SetAutoRenaming(True)\n",
     "\n",
-    "gripper = parser.AddModels(file_name=\"my_experiments/my_sdfs/wsg.sdf\")[0]\n",
-    "cap = parser.AddModels(file_name=\"my_experiments/my_sdfs/bottle_cap.sdf\")[0]\n",
+    "gripper = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "cap = parser.AddModels(file_name=\"my_sdfs/bottle_cap.sdf\")[0]\n",
     "\n",
     "plant.Finalize()"
    ]
