--- a/my_experiments/constraints_cubes.ipynb
+++ b/my_experiments/constraints_cubes.ipynb
@@ -56,12 +56,12 @@
     "# grasp3 = parser.AddModelFromFile(\"models/wsg_transparent.sdf\")\n",
     "# grasp4 = parser.AddModelFromFile(\"models/wsg_transparent.sdf\")\n",
     "\n",
-    "grasp1 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp2 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp3 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp4 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "grasp1 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
+    "grasp2 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
+    "grasp3 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
+    "grasp4 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
     "\n",
-    "brick = parser.AddModels(file_name=\"my_sdfs/cube.sdf\")[0]\n",
+    "brick = parser.AddModels(file_name=\"../my_sdfs/cube.sdf\")[0]\n",
     "plant.Finalize()\n",
     "\n",
     "bodies_list1 = [grasp1, grasp2, grasp3, grasp4]"
