--- a/my_experiments/constraints_cubes_position.ipynb
+++ b/my_experiments/constraints_cubes_position.ipynb
@@ -47,10 +47,10 @@
     "parser = Parser(plant, scene_graph)\n",
     "parser.SetAutoRenaming(True)\n",
     "\n",
-    "grasp1 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp2 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "grasp1 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
+    "grasp2 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
     "\n",
-    "brick = parser.AddModels(file_name=\"my_sdfs/cube.sdf\")[0]\n",
+    "brick = parser.AddModels(file_name=\"../my_sdfs/cube.sdf\")[0]\n",
     "plant.Finalize()\n",
     "\n",
     "model_list = [grasp1, grasp2]"
