--- a/my_experiments/constraints_prisms.ipynb
+++ b/my_experiments/constraints_prisms.ipynb
@@ -55,12 +55,12 @@
     "# grasp3 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
     "# grasp4 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
     "\n",
-    "grasp1 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
-    "grasp2 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
+    "grasp1 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
+    "grasp2 = parser.AddModels(file_name=\"../my_sdfs/wsg.sdf\")[0]\n",
     "grasp3 = 1#parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "grasp4 = 1#parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "\n",
-    "brick = parser.AddModels(file_name=\"my_sdfs/prism.sdf\")[0]\n",
+    "brick = parser.AddModels(file_name=\"../my_sdfs/prism.sdf\")[0]\n",
     "plant.Finalize()\n",
     "\n",
     "models_list = [grasp1, grasp2, grasp3, grasp4]"
