--- a/my_experiments/constraints_cubes_y_axis.ipynb
+++ b/my_experiments/constraints_cubes_y_axis.ipynb
@@ -51,17 +51,17 @@
     "\n",
     "# Transparent objects\n",
     "# brick = parser.AddModelFromFile(\"models/cube_transparent.sdf\")\n",
-    "grasp1 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
-    "grasp2 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
-    "grasp3 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
-    "grasp4 = parser.AddModels(\"my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp1 = parser.AddModels(\"../my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp2 = parser.AddModels(\"../my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp3 = parser.AddModels(\"../my_sdfs/wsg_transparent.sdf\")[0]\n",
+    "grasp4 = parser.AddModels(\"../my_sdfs/wsg_transparent.sdf\")[0]\n",
     "\n",
     "# grasp1 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "# grasp2 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "# grasp3 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "# grasp4 = parser.AddModels(file_name=\"my_sdfs/wsg.sdf\")[0]\n",
     "\n",
-    "brick = parser.AddModels(file_name=\"my_sdfs/cube.sdf\")[0]\n",
+    "brick = parser.AddModels(file_name=\"../my_sdfs/cube.sdf\")[0]\n",
     "plant.Finalize()\n",
     "\n",
     "models_list = [grasp1, grasp2, grasp3, grasp4]"
