--- a/bottle_cap_TCspace.ipynb
+++ b/bottle_cap_TCspace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://localhost:7000\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "meshcat = StartMeshcat()\n",
     "builder = DiagramBuilder()\n",
@@ -188,16 +204,16 @@
    "outputs": [],
    "source": [
     "sliders = []\n",
-    "for i in range(ur.plant.num_positions()):\n",
-    "    q_low = ur.plant.GetPositionLowerLimits()[i]\n",
-    "    q_high = ur.plant.GetPositionUpperLimits()[i]\n",
+    "for i in range(plant.num_positions()):\n",
+    "    q_low = plant.GetPositionLowerLimits()[i]\n",
+    "    q_high = plant.GetPositionUpperLimits()[i]\n",
     "    sliders.append(widgets.FloatSlider(min=q_low, max=q_high, value=0, description=f\"q{i}\"))\n",
     "\n",
-    "q = np.zeros(ur.plant.num_positions())\n",
+    "q = np.zeros(plant.num_positions())\n",
     "def handle_slider_change(change, idx):\n",
     "    q[idx] = change['new']\n",
-    "    ur.plant.SetPositions(plant_context, q)\n",
-    "    ur.diagram.ForcedPublish(diagram_context)\n",
+    "    plant.SetPositions(plant_context, q)\n",
+    "    diagram.ForcedPublish(diagram_context)\n",
     "    \n",
     "idx = 0\n",
     "for slider in sliders:\n",
@@ -210,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pydrake.geometry.MeshcatVisualizer at 0x7f583c36eff0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "meshcat.Delete()\n",
     "meshcat.SetProperty(\"/Background\", \"visible\", False)\n",
@@ -260,9 +287,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "A function call on a drake::multibody::MultibodyPlant<double> system named '::plant' was passed the Context of a system named '::_::plant' instead of the appropriate subsystem Context.\nFor more information about Context-System mismatches, see https://drake.mit.edu/troubleshooting.html#framework-context-system-mismatch",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_51530/1052299133.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mworld_body\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld_body\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_WO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEvalBodyPoseInWorld\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplant_context\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworld_body\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mp_GgraspO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m.115\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mR_GgraspO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRotationMatrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMakeXRotation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRotationMatrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMakeZRotation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: A function call on a drake::multibody::MultibodyPlant<double> system named '::plant' was passed the Context of a system named '::_::plant' instead of the appropriate subsystem Context.\nFor more information about Context-System mismatches, see https://drake.mit.edu/troubleshooting.html#framework-context-system-mismatch"
+     ]
+    }
+   ],
    "source": [
     "world_body = plant.world_body()\n",
     "X_WO = plant.EvalBodyPoseInWorld(plant_context, world_body)\n",
