--- a/bottle_cap_TCspace.ipynb
+++ b/bottle_cap_TCspace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,22 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:7000\n",
-      "4\n"
+      "http://localhost:7001\n"
      ]
     }
    ],
@@ -103,12 +102,17 @@
     "    plant.GetFrameByName(\"base_link\", cap),\n",
     "    RigidTransform(RotationMatrix(), [0, 0, 0]))\n",
     "\n",
-    "p_GgraspO = [0, 0, .07]\n",
+    "p_GgraspO = [0, 0, .065]\n",
     "R_GgraspO = RotationMatrix.MakeXRotation(-np.pi / 2)\n",
     "plant.WeldFrames(\n",
     "    plant.world_frame(),\n",
     "    plant.GetFrameByName(\"base_wsg\", gripper),\n",
     "    RigidTransform(R_GgraspO, p_GgraspO))\n",
+    "\n",
+    "# plant.WeldFrames(\n",
+    "#     plant.GetFrameByName(\"body\", gripper),\n",
+    "#     plant.GetFrameByName(\"right_finger\", gripper),\n",
+    "#     RigidTransform(RotationMatrix(), [0.025, 0, 0]))\n",
     "\n",
     "plant.Finalize()\n",
     "\n",
@@ -140,6 +144,9 @@
     "scene_graph.collision_filter_manager().Apply(\n",
     "    CollisionFilterDeclaration().ExcludeBetween(gripper_geometries, cap_geometries))\n",
     "\n",
+    "# TODO: This will consider the gripper touching the cap as a collision. \n",
+    "# TODO: Figure out if needs change or adjustment later in grasping space.\n",
+    "\n",
     "\n",
     "# Add visualization\n",
     "meshcat_params = MeshcatVisualizerParams()\n",
@@ -165,19 +172,17 @@
     "\n",
     "# Set initial configuration\n",
     "plant.GetJointByName(\"left_finger_sliding_joint\", gripper).set_translation(\n",
-    "    plant_context, -0.033\n",
+    "    plant_context, -0.025\n",
     ")\n",
-    "plant.GetJointByName(\"right_finger_sliding_joint\", gripper).set_translation(\n",
-    "    plant_context, 0.033\n",
-    ")\n",
+    "# plant.GetJointByName(\"right_finger_sliding_joint\", gripper).set_translation(\n",
+    "#     plant_context, 0.025\n",
+    "# )\n",
     "\n",
     "\n",
-    "diagram = diagram.ForcedPublish(diagram_context)\n",
+    "diagram.ForcedPublish(diagram_context)\n",
     "\n",
     "# TCspace\n",
     "Rat_FK = RationalForwardKinematics(plant)\n",
-    "\n",
-    "print(plant.num_positions())\n",
     "\n",
     "q_star = np.zeros(3)\n",
     "\n",
@@ -199,16 +204,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60da4c7633ca432691cc01988f57852c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q0', max=3.14159, min=-3.14159, step=0.0628318)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a2f46e4df9b04346b0f27582c877ca83",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q1', max=1.0, min=-1.0, step=0.02)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29ce72edf8794b90b408bb778af68729",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q2', max=0.0, min=-0.055, step=0.00055)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sliders = []\n",
+    "print(plant.num_positions())\n",
     "for i in range(plant.num_positions()):\n",
     "    q_low = plant.GetPositionLowerLimits()[i]\n",
     "    q_high = plant.GetPositionUpperLimits()[i]\n",
-    "    sliders.append(widgets.FloatSlider(min=q_low, max=q_high, value=0, description=f\"q{i}\"))\n",
-    "\n",
+    "    step = (q_high - q_low) / 100\n",
+    "    sliders.append(widgets.FloatSlider(\n",
+    "        min=q_low, max=q_high, \n",
+    "        value=0, step=step, \n",
+    "        description=f\"q{i}\"))\n",
     "q = np.zeros(plant.num_positions())\n",
     "def handle_slider_change(change, idx):\n",
     "    q[idx] = change['new']\n",
@@ -226,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,16 +313,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pydrake.geometry.MeshcatVisualizer at 0x7f583c36eff0>"
+       "<pydrake.geometry.MeshcatVisualizer at 0x7f9fe9c228f0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,19 +346,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "A function call on a drake::multibody::MultibodyPlant<double> system named '::plant' was passed the Context of a system named '::_::plant' instead of the appropriate subsystem Context.\nFor more information about Context-System mismatches, see https://drake.mit.edu/troubleshooting.html#framework-context-system-mismatch",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_51530/1052299133.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mworld_body\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworld_body\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_WO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEvalBodyPoseInWorld\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplant_context\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mworld_body\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mp_GgraspO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m.115\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mR_GgraspO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRotationMatrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMakeXRotation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRotationMatrix\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMakeZRotation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: A function call on a drake::multibody::MultibodyPlant<double> system named '::plant' was passed the Context of a system named '::_::plant' instead of the appropriate subsystem Context.\nFor more information about Context-System mismatches, see https://drake.mit.edu/troubleshooting.html#framework-context-system-mismatch"
-     ]
+     "data": {
+      "text/plain": [
+       "<PrismaticJoint name='right_finger_sliding_joint' index=1 model_instance=2>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -325,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
