advances on scene

--- a/bottle_cap_3DTCspace.ipynb
+++ b/bottle_cap_3DTCspace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,15 +99,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7003\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Variable('s[0]', Continuous) Variable('s[1]', Continuous)\n",
+      " Variable('s[2]', Continuous)]\n"
      ]
     }
    ],
@@ -118,8 +126,8 @@
     "parser = Parser(plant, scene_graph)\n",
     "parser.SetAutoRenaming(True)\n",
     "\n",
-    "# Add the robot\n",
-    "gripper = parser.AddModels(file_name=\"my_sdfs/wsg_1dof.sdf\")[0]\n",
+    "# Add the robot and object models from SDFs\n",
+    "gripper = parser.AddModels(file_name=\"my_sdfs/wsg_2dof.sdf\")[0]\n",
     "cap = parser.AddModels(file_name=\"my_sdfs/bottle_cap.sdf\")[0]\n",
     "\n",
     "# Set welds\n",
@@ -164,134 +172,82 @@
     "    CollisionFilterDeclaration().ExcludeWithin(cap_geometries))\n",
     "\n",
     "\n",
-    "# TODO: This will consider the gripper touching the cap as a collision. \n",
-    "# TODO: Figure out if needs change or adjustment later in grasping space.\n",
-    "\n",
-    "\n",
-    "# Add visualization\n",
-    "meshcat_params = MeshcatVisualizerParams()\n",
-    "meshcat_params.role = Role.kIllustration\n",
-    "\n",
-    "# visualizer = MeshcatVisualizer.AddToBuilder(\n",
-    "#     builder,\n",
-    "#     scene_graph,\n",
-    "#     meshcat,\n",
-    "#     meshcat_params)\n",
-    "\n",
-    "# meshcat.SetProperty(\"/Background\", \"top_color\", [0.8, 0.8, 0.6])\n",
-    "# meshcat.SetProperty(\"/Background\", \"bottom_color\", [0.9, 0.9, 0.9])\n",
-    "\n",
-    "\n",
-    "# diagram = builder.Build()\n",
-    "\n",
-    "# # Context\n",
-    "# diagram_context = diagram.CreateDefaultContext()\n",
-    "# plant_context = plant.GetMyContextFromRoot(diagram_context)\n",
-    "# scene_graph_context = scene_graph.GetMyMutableContextFromRoot(diagram_context)\n",
-    "\n",
-    "# diagram.ForcedPublish(diagram_context)\n",
-    "\n",
-    "# TCspace\n",
-    "Rat_FK = RationalForwardKinematics(plant)\n",
-    "\n",
-    "q_star = np.zeros(plant.num_positions())\n",
-    "\n",
-    "cspace_free_polytope = CspaceFreePolytope(\n",
-    "    plant, \n",
-    "    scene_graph,\n",
-    "    SeparatingPlaneOrder.kAffine,\n",
-    "    q_star)\n",
-    "\n",
-    "\n",
-    "visualizer = CIrisPlantVisualizer(\n",
-    "    plant,\n",
-    "    builder,\n",
-    "    scene_graph,\n",
-    "    cspace_free_polytope,\n",
-    "    viz_role=Role.kIllustration\n",
-    ")\n",
-    "\n",
-    "plant_context = visualizer.plant_context\n",
-    "diagram = visualizer.task_space_diagram\n",
-    "diagram_context = visualizer.task_space_diagram_context\n",
-    "\n",
     "# Set initial configuration\n",
-    "plant.GetJointByName(\"left_finger_sliding_joint\", gripper).set_translation(\n",
-    "    plant_context, -0.025\n",
-    ")\n",
+    "# plant.GetJointByName(\"left_finger_sliding_joint\", gripper).set_translation(\n",
+    "#     plant_context, -0.025\n",
+    "# )\n",
     "# # plant.GetJointByName(\"right_finger_sliding_joint\", gripper).set_translation(\n",
     "# #     plant_context, 0.025\n",
     "# # )\n",
     "\n",
-    "visualizer.visualize_collision_constraint(factor = 10, num_points=100)#N=50, iso_surface = 0.5, wireframe = True)\n",
-    "# # visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(np.pi/2), np.array([0,0,1])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if plant.num_positions > 3:\n",
-    "#     raise ValueError(\"Can't visualize the TC-Space of plants with more than 3 DOF\")\n",
+    "# visualizer.visualize_collision_constraint(factor = 10, N=50, iso_surface = 0.5, wireframe = True)\n",
+    "# # visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(np.pi/2), np.array([0,0,1])))\n",
     "\n",
-    "# # start meshcat for task space and delete the default cube\n",
-    "# meshcat_task_space = StartMeshcat()\n",
-    "# meshcat_task_space.Delete()\n",
+    "if plant.num_positions() > 3:\n",
+    "    raise ValueError(\"Can't visualize the TC-Space of plants with more than 3 DOF\")\n",
     "\n",
-    "# # start meshcat for tangent configuration space\n",
-    "# meshcat_tcspace = StartMeshcat()\n",
-    "# meshcat_tcspace.Delete()\n",
-    "# builder_tcspace = DiagramBuilder()\n",
-    "# plant_tcspace, scene_graph_tcspace = AddMultibodyPlantSceneGraph(\n",
-    "#     builder_tcspace, time_step=0.0)\n",
-    "# plant.tcspace.Finalize()\n",
+    "# start meshcat for task space and delete the default cube\n",
+    "meshcat_task_space = StartMeshcat()\n",
+    "meshcat_task_space.Delete()\n",
+    "\n",
+    "# start meshcat for tangent configuration space\n",
+    "meshcat_tcspace = StartMeshcat()\n",
+    "meshcat_tcspace.Delete()\n",
+    "builder_tcspace = DiagramBuilder()\n",
+    "plant_tcspace, scene_graph_tcspace = AddMultibodyPlantSceneGraph(\n",
+    "    builder_tcspace, time_step=0.0)\n",
+    "plant_tcspace.Finalize()\n",
     "\n",
     "\n",
-    "# # start visualizers\n",
-    "# visualizer_task_space = MeshcatVisualizer.AddToBuilder(\n",
-    "#     builder,\n",
-    "#     scene_graph,\n",
-    "#     meshcat_task_space\n",
-    "# )\n",
-    "# viz_role = Role.kIllustration\n",
+    "# start visualizers\n",
+    "visualizer_task_space = MeshcatVisualizer.AddToBuilder(\n",
+    "    builder,\n",
+    "    scene_graph,\n",
+    "    meshcat_task_space\n",
+    ")\n",
+    "viz_role = Role.kIllustration\n",
     "\n",
-    "# visualizer_tcspace = MeshcatVisualizer.AddToBuilder(\n",
-    "#     builder_tcspace,\n",
-    "#     scene_graph_tcspace,\n",
-    "#     meshcat_tcspace\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# # Build the diagrams\n",
-    "# diagram_task_space = builder.Build()\n",
-    "# diagram_context_task_space = diagram_task_space.CreateDefaultContext()\n",
-    "\n",
-    "# diagram_tcspace = builder_tcspace.Build()\n",
-    "# diagram_context_tcspace = diagram_tcspace.CreateDefaultContext()\n",
-    "\n",
-    "# plant_context = plant.GetMyContextFromRoot(diagram_context_task_space)\n",
+    "visualizer_tcspace = MeshcatVisualizer.AddToBuilder(\n",
+    "    builder_tcspace,\n",
+    "    scene_graph_tcspace,\n",
+    "    meshcat_tcspace\n",
+    ")\n",
     "\n",
     "\n",
-    "# # Publish the visualisation in the task space\n",
-    "# diagram_task_space.ForcedPublish(diagram_context_task_space)\n",
+    "# Build the diagrams\n",
+    "diagram_task_space = builder.Build()\n",
+    "diagram_context_task_space = diagram_task_space.CreateDefaultContext()\n",
+    "\n",
+    "diagram_tcspace = builder_tcspace.Build()\n",
+    "diagram_context_tcspace = diagram_tcspace.CreateDefaultContext()\n",
+    "\n",
+    "plant_context = plant.GetMyContextFromRoot(diagram_context_task_space)\n",
     "\n",
     "\n",
-    "# # Initialize the simulator\n",
-    "# # The simulator is used to update the visualisation\n",
-    "# simulator = Simulator(\n",
-    "#     diagram_task_space, \n",
-    "#     diagram_context_task_space\n",
-    "# )\n",
-    "# simulator.Initialize()\n",
+    "# Publish the visualisation in the task space\n",
+    "diagram_task_space.ForcedPublish(diagram_context_task_space)\n",
     "\n",
     "\n",
-    "# model_inspector = scene_graph.model_inspector()\n",
-    "# query = scene_graph.get_query_output_port().Eval(scene_graph.GerMy)\n",
+    "# Initialize the simulator\n",
+    "# The simulator is used to update the visualisation\n",
+    "simulator = Simulator(\n",
+    "    diagram_task_space, \n",
+    "    diagram_context_task_space\n",
+    ")\n",
+    "simulator.Initialize()\n",
     "\n",
     "\n",
-    "\n"
+    "# SceneGraph inspectors for highlighting geometry pairs.\n",
+    "# This means that we can highlight the collision pairs.\n",
+    "# The query object is used to get the collision pairs, and the model_inspector is used to highlight them.\n",
+    "model_inspector = scene_graph.model_inspector()\n",
+    "query = scene_graph.get_query_output_port().Eval(scene_graph.GetMyContextFromRoot(diagram_context_task_space))\n",
+    "\n",
+    "\n",
+    "# Construct the Rational Forward Kinematics\n",
+    "rat_forward_kin = RationalForwardKinematics(plant)\n",
+    "s_variables = sym.Variables(rat_forward_kin.s())\n",
+    "print(rat_forward_kin.s())"
    ]
   },
   {
@@ -305,13 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8731108d0fa2442e95a7eae059244f19",
+       "model_id": "edb1d494ae064e0faf7b8ed8b4bee2e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,12 +281,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e994973916e6477a9a428de844e8fc73",
+       "model_id": "ebe149505ef24bb59198128ca0e8dfe1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=0.0, description='q1', max=0.0, min=-0.055, step=0.00055)"
+       "FloatSlider(value=0.0, description='q1', max=1.0, min=-1.0, step=0.02)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "78377d041293434b882e8f7740b02815",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='q2', max=0.0, min=-0.055, step=0.00055)"
       ]
      },
      "metadata": {},
@@ -353,7 +323,7 @@
     "def handle_slider_change(change, idx):\n",
     "    q[idx] = change['new']\n",
     "    plant.SetPositions(plant_context, q)\n",
-    "    diagram.ForcedPublish(diagram_context)\n",
+    "    diagram_task_space.ForcedPublish(diagram_context_task_space)\n",
     "    \n",
     "idx = 0\n",
     "for slider in sliders:\n",
