some notes on the bottlecap_TCspace

--- a/bottle_cap_TCspace.ipynb
+++ b/bottle_cap_TCspace.ipynb
@@ -44,7 +44,8 @@
     "\n",
     "from pydrake.all import (HPolyhedron, AngleAxis,\n",
     "                         VPolytope, Sphere, Ellipsoid, InverseKinematics,\n",
-    "                         Hyperellipsoid, Simulator, Box)\n",
+    "                         Hyperellipsoid, Simulator, Box, ContactModel, HydroelasticContactRepresentation,\n",
+    "PrismaticJoint, JointActuatorIndex)\n",
     "import mcubes\n",
     "\n",
     "import visualization_utils as viz_utils\n",
@@ -92,22 +93,79 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "## Set up the scene\n",
+    "\n",
+    "Some notes and memory aid on the code\n",
+    "- TCspace in collision is colored in red/orange\n",
+    "- TCspace not in collision is colored in greenish\n",
+    "- max and min translation of the fingers lf: (-0.055, 0), rf: (0, 0.055)\n",
+    "\n",
+    "Visualisation seems to be suggesting that entire TCSpace is in collision. Following are current hypotheses.\n",
+    "\n",
+    "- [x] Incorrect parametersation of polytope computation\n",
+    "- [x] collision properties of the individual objects are not set properly\n",
+    "- [ ] What is the configuration space? Is the current configuration space correct?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set up the scene"
+    "### Some Observations\n",
+    "\n",
+    "I think collision settings and plant intialisation are good! I don't see a problem there.\n",
+    "\n",
+    "The current $\\mathcal{C}$-space seems to be \n",
+    "\n",
+    "- finger prismatic joint\n",
+    "- cap revolute joint\n",
+    "\n",
+    "My understanding is that the cap joint needs to be unactuated, and the motion plan should be in either of the following $\\mathcal{C}$-space \n",
+    "\n",
+    "- 2 prismatic joints - both fingers actuated - $\\mathcal{C} \\in \\mathbb{R}^{2}$\n",
+    "- A pair of mimiced prismatic joints, and a gripper revolute joint. $\\mathcal{C} \\in \\mathbb{R}^{2}$\n",
+    "- 2 prismatic joints for fingers, and 1 revolute joint for gripper $\\mathcal{C} \\in \\mathbb{R}^{3}$\n",
+    "\n",
+    "A sanity check for now would be to remove the revolute joint on the cap (or keep the joint but remove actuation), and populate your q0 and q_star to be for both the fingers. Plot that and see how the IRIS algo works for that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7003\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<PrismaticJoint name='left_finger_sliding_joint' index=0 model_instance=2>\n",
+      "joint: <PrismaticJoint name='left_finger_sliding_joint' index=0 model_instance=2>\n",
+      "joint upper and lower limits: 0.0, -0.055\n",
+      "<WeldJoint name='right_finger_sliding_joint' index=1 model_instance=2>\n",
+      "<WeldJoint name='base_revolute_joint' index=2 model_instance=2>\n",
+      "<WeldJoint name='world_welds_to_base_wsg' index=5 model_instance=2>\n"
      ]
     }
    ],
@@ -117,6 +175,10 @@
     "plant, scene_graph = AddMultibodyPlantSceneGraph(builder, time_step=0.0)\n",
     "parser = Parser(plant, scene_graph)\n",
     "parser.SetAutoRenaming(True)\n",
+    "\n",
+    "# set contact parameters\n",
+    "plant.set_contact_model(ContactModel.kHydroelasticWithFallback)\n",
+    "plant.set_contact_surface_representation(HydroelasticContactRepresentation.kPolygon)\n",
     "\n",
     "# Add the robot\n",
     "gripper = parser.AddModels(file_name=\"my_sdfs/wsg_1dof.sdf\")[0]\n",
@@ -137,6 +199,17 @@
     "\n",
     "\n",
     "plant.Finalize()\n",
+    "# plant.GetJointByName(\"left_finger_sliding_joint\", gripper).set_translation(\n",
+    "#     plant_context, -0.025)\n",
+    "\n",
+    "for joint_index in plant.GetJointIndices(gripper):\n",
+    "    joint = plant.get_mutable_joint(joint_index)\n",
+    "    print(f\"{joint}\")\n",
+    "    if isinstance(joint, PrismaticJoint):\n",
+    "        joint.set_default_translation(-0.055)\n",
+    "        print(f\"joint: {joint}\")\n",
+    "        print(f\"joint upper and lower limits: {joint.position_upper_limit()}, {joint.position_lower_limit()}\")\n",
+    "                                    \n",
     "\n",
     "# Release collision constraints\n",
     "inspector = scene_graph.model_inspector()\n",
@@ -144,24 +217,28 @@
     "# Penetration allowed between gripper and cap\n",
     "\n",
     "# Gripper inner collision\n",
-    "gripper_geometries = GeometrySet()\n",
-    "for i in range(len(plant.GetBodyIndices(gripper))):\n",
-    "    body_index = plant.GetBodyIndices(gripper)[i]\n",
-    "    body_geometries = inspector.GetGeometries(\n",
-    "        plant.GetBodyFrameIdOrThrow(body_index))\n",
-    "    gripper_geometries.Add(geometry_ids=body_geometries)\n",
+    "# commented by aditya\n",
+    "# gripper_geometries = GeometrySet()\n",
+    "# for i in range(len(plant.GetBodyIndices(gripper))):\n",
+    "#     body_index = plant.GetBodyIndices(gripper)[i]\n",
+    "#     body_geometries = inspector.GetGeometries(\n",
+    "#         plant.GetBodyFrameIdOrThrow(body_index))\n",
+    "#     gripper_geometries.Add(geometry_ids=body_geometries)\n",
+    "# commented till here by aditya\n",
     "# scene_graph.collision_filter_manager().Apply(\n",
     "#     CollisionFilterDeclaration().ExcludeWithin(gripper_geometries))\n",
     "\n",
     "# Gripper and cap collision\n",
-    "cap_geometries = GeometrySet()\n",
-    "for i in range(len(plant.GetBodyIndices(cap))):\n",
-    "    body_index = plant.GetBodyIndices(cap)[i]\n",
-    "    body_geometries = inspector.GetGeometries(\n",
-    "        plant.GetBodyFrameIdOrThrow(body_index))\n",
-    "    cap_geometries.Add(geometry_ids=body_geometries)\n",
-    "scene_graph.collision_filter_manager().Apply(\n",
-    "    CollisionFilterDeclaration().ExcludeWithin(cap_geometries))\n",
+    "# commented by aditya\n",
+    "# cap_geometries = GeometrySet()\n",
+    "# for i in range(len(plant.GetBodyIndices(cap))):\n",
+    "#     body_index = plant.GetBodyIndices(cap)[i]\n",
+    "#     body_geometries = inspector.GetGeometries(\n",
+    "#         plant.GetBodyFrameIdOrThrow(body_index))\n",
+    "#     cap_geometries.Add(geometry_ids=body_geometries)\n",
+    "# scene_graph.collision_filter_manager().Apply(\n",
+    "#     CollisionFilterDeclaration().ExcludeWithin(cap_geometries))\n",
+    "# commented till here by aditya\n",
     "\n",
     "\n",
     "# TODO: This will consider the gripper touching the cap as a collision. \n",
@@ -195,6 +272,7 @@
     "Rat_FK = RationalForwardKinematics(plant)\n",
     "\n",
     "q_star = np.zeros(plant.num_positions())\n",
+    "q_star[0] = -0.025\n",
     "\n",
     "cspace_free_polytope = CspaceFreePolytope(\n",
     "    plant, \n",
@@ -216,15 +294,45 @@
     "diagram_context = visualizer.task_space_diagram_context\n",
     "\n",
     "# Set initial configuration\n",
-    "plant.GetJointByName(\"left_finger_sliding_joint\", gripper).set_translation(\n",
-    "    plant_context, -0.025\n",
-    ")\n",
+    "# plant.GetJointByName(\"left_finger_sliding_joint\", gripper).set_translation(\n",
+    "#     plant_context, -0.025\n",
+    "# )\n",
     "# # plant.GetJointByName(\"right_finger_sliding_joint\", gripper).set_translation(\n",
     "# #     plant_context, 0.025\n",
     "# # )\n",
     "\n",
     "visualizer.visualize_collision_constraint(factor = 10, num_points=100)#N=50, iso_surface = 0.5, wireframe = True)\n",
+    "visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(0), np.array([0,0,1])))\n",
+    "visualizer.meshcat_task_space.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(0), np.array([0,1,0])))\n",
     "# # visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(np.pi/2), np.array([0,0,1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num actuators: 2\n",
+      "actuators: left_finger_sliding_joint\n",
+      "actuators: cap_to_base\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"num actuators: {plant.num_actuators()}\")\n",
+    "for actuator_index in range(plant.num_actuators()):\n",
+    "    actuator = plant.get_joint_actuator(JointActuatorIndex(actuator_index))\n",
+    "    print(f\"actuators: {actuator.name()}\")"
    ]
   },
   {
@@ -567,5 +675,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
