some more notes

--- a/bottle_cap_TCspace.ipynb
+++ b/bottle_cap_TCspace.ipynb
@@ -134,7 +134,9 @@
     "- A pair of mimiced prismatic joints, and a gripper revolute joint. $\\mathcal{C} \\in \\mathbb{R}^{2}$\n",
     "- 2 prismatic joints for fingers, and 1 revolute joint for gripper $\\mathcal{C} \\in \\mathbb{R}^{3}$\n",
     "\n",
-    "A sanity check for now would be to remove the revolute joint on the cap (or keep the joint but remove actuation), and populate your q0 and q_star to be for both the fingers. Plot that and see how the IRIS algo works for that."
+    "A sanity check for now would be to remove the revolute joint on the cap (or keep the joint but remove actuation), and populate your q0 and q_star to be for both the fingers. Plot that and see how the IRIS algo works for that.\n",
+    "\n",
+    "I have changed the visualisation to 2D so that it is more clear on meshcat. Feel free to change it back."
    ]
   },
   {
